[metdata]
name=OpenEnsembles
version=v2.0.0
author=Naegle Lab
description = An open source Python package for performing, finishing, and analyzing ensemble clustering.
long_description = readme.md
long_description_type = text/markdown
url=https://github.com/NaegleLab/OpenEnsembles

[options]
package_dir = 
	= ./
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ./